# reminder

./: Cargo.toml  README.md
src/: app.rs  domain.rs  github.rs  storage.rs
src/app/: fonts.rs  notification_state.rs  repo_paths.rs  review.rs  scheduler.rs  search.rs  state.rs
src/app/ui/: account_card.rs  layout.rs  mod.rs  notifications.rs  sidebar.rs
